# Security

./: .env.example  .gitattributes  .gitignore  .gitleaksignore  AGENTS.md  AISOC_V8_PROGRESS.md  AI_STACK_PLAN_PROGRESS.md  CHANGELOG.md  CONTRIBUTING.md  EVAL_BEFORE_AFTER.md  LICENSES.md  MIGRATION.md  NOTICE.md  PROGRESS-v1.5.md  PROGRESS.md  README.md  REVIEW_GUIDE.md  ROADMAP.md  SECURITY.md  docker-compose.airgap.yml  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.yml  install.ps1  install.sh  package.json  playbook.schema.json  pnpm-lock.yaml  render.yaml  uninstall.ps1  uninstall.sh
.github/: FUNDING.yml  dependabot.yml
.planning/: SESSION-NOTES.md
detections/: README.md
docs/: QUICK_INSTALL.md  SKILL.md  branding.md  openapi.yaml  rebrand-checklist.md  threat-actor-attribution.md
hunts/: README.md  cloud-iam-role-anomalous-assume.yaml  dns-tunneling-large-txt.yaml  lolbin-rundll32-network.yaml  oauth-app-mass-consent.yaml  svc-account-after-hours.yaml
packs/: README.md  quarry-attck-defense-evasion.yaml  quarry-attck-persistence.yaml  quarry-fim-baseline.yaml  quarry-fim-credentials.yaml  quarry-inventory-baseline.yaml
plans/: aisoc_v8.0_north_star_plan_1dee8c63.plan.md  future-release-implementation-plan.md  quarry_v8.0_north_star_plan_1dee8c63.plan.md
playbooks/: README.md
services/teams-bot/: README.md  pyproject.toml
services/teams-bot/app/: __init__.py  callbacks.py  cards.py  main.py
services/teams-bot/app/services/: aisoc_clients.py  hmac_signer.py  quarry_clients.py
services/teams-bot/tests/: test_cards.py
(+4999 files in other folders)
